[package]
name = "liquid-layout"
version = "0.1.0"
authors = ["Heyang Zhou <zhy20000919@hotmail.com>"]
edition = "2018"
license = "MIT"
description = "A layout engine that solves UI constraints using the Z3 solver."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z3 = "0.10"
bumpalo = "3"
fraction = "0.8"
rand = "0.7"
anyhow = "1"
thiserror = "1"
log = "0.4"
